# ChangeLog for media-libs/libcue
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libcue/ChangeLog,v 1.8 2009/07/27 16:58:50 nixnut Exp $

  27 Jul 2009; nixnut <nixnut@gentoo.org> libcue-1.3.0.ebuild:
  ppc stable #278677

  22 Jul 2009; Dawid Węgliński <cla@gentoo.org> libcue-1.3.0.ebuild:
  Stable on amd64 (bug #278677)

  22 Jul 2009; Christian Faulhammer <fauli@gentoo.org> libcue-1.3.0.ebuild:
  stable x86, bug 278677

  20 May 2009; Raúl Porcel <armin76@gentoo.org> libcue-1.3.0.ebuild:
  Add ~arm/~sh/~sparc wrt #269531

  20 May 2009; Brent Baude <ranger@gentoo.org> libcue-1.3.0.ebuild:
  marking libcue-1.3.0 ~ppc and ~ppc64 for bug 269531

  14 May 2009; Jeroen Roovers <jer@gentoo.org> libcue-1.3.0.ebuild:
  Marked ~hppa (bug #269531).

  14 May 2009; Samuli Suominen <ssuominen@gentoo.org> libcue-1.3.0.ebuild:
  Keyword ~x86, thanks to Poly-C for testing at #gentoo-x86.

*libcue-1.3.0 (12 May 2009)

  12 May 2009; Samuli Suominen <ssuominen@gentoo.org> +libcue-1.3.0.ebuild:
  Initial commit wrt #268879, thanks to Ihar Hrachyshka. This library will
  be needed for >=media-sound/mpd-0.15_beta1.
