@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcue/Attic/libcue-1.3.0.ebuild,v 1.8 2009/07/27 16:58:50 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcue/Attic/libcue-1.3.0.ebuild,v 1.9 2009/08/03 03:15:17 jer Exp $
 
 EAPI=2
 DESCRIPTION="CUE Sheet Parser Library"
@@ -9,7 +9,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ~arm ~hppa ppc ~ppc64 ~sh ~sparc x86"
+KEYWORDS="amd64 ~arm hppa ppc ~ppc64 ~sh ~sparc x86"
 IUSE=""
 
 RDEPEND=""
