@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mpd
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.179 2009/07/27 17:00:51 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.180 2009/08/03 03:16:43 jer Exp $
+
+  03 Aug 2009; Jeroen Roovers <jer@gentoo.org> mpd-0.15.ebuild:
+  Stable for HPPA (bug #278677).
 
   27 Jul 2009; nixnut <nixnut@gentoo.org> mpd-0.15.ebuild:
   ppc stable #278677
