@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libcue
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcue/ChangeLog,v 1.8 2009/07/27 16:58:50 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcue/ChangeLog,v 1.9 2009/08/03 03:15:17 jer Exp $
+
+  03 Aug 2009; Jeroen Roovers <jer@gentoo.org> libcue-1.3.0.ebuild:
+  Stable for HPPA (bug #278677).
 
   27 Jul 2009; nixnut <nixnut@gentoo.org> libcue-1.3.0.ebuild:
   ppc stable #278677
